--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 1rem 0;
+  gap: 1rem;
+}
+
 .CardsContainer {
   display: flex;
   flex-wrap: wrap;
